--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.1",
     "@supabase/supabase-js": "^2.39.3",
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
@@ -20,7 +21,8 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.22.1",
     "react-transition-group": "^4.4.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
