--- a/package.json
+++ b/package.json
@@ -7,15 +7,27 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/index.js",
+    "server:dev": "nodemon server/index.js",
+    "start": "node server/index.js"
   },
   "dependencies": {
+    "@google-cloud/bigquery": "^7.3.0",
+    "@google-cloud/storage": "^7.7.0",
+    "@google-cloud/vertexai": "^1.4.0",
     "@sendgrid/mail": "^8.1.0",
     "@supabase/supabase-js": "^2.39.0",
     "chart.js": "^4.4.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.0.6",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "framer-motion": "^10.16.4",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
     "lucide-react": "^0.294.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +38,9 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -38,6 +53,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "nodemon": "^3.0.2",
     "postcss": "^8.4.32",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "tailwindcss": "^3.3.6",
